--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        apt-get install graphviz
+        sudo apt-get install graphviz
         python -m pip install --upgrade pip
         pip install -r ./dev-requirements.txt
     - name: Test with pytest
