--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v2
@@ -23,7 +23,6 @@ jobs:
         pip install -r ./dev-requirements.txt
     - name: Test with pytest
       run: |
-        black --check .
-        flake8
+        ruff check .
         mypy ./powerplan
         pytest --random-order
