--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,13 @@
-[tool.black]
+[tool.ruff]
 line-length = 110
+target-version = "py311"
+
+[tool.ruff.lint]
+select = ["E", "F", "B", "UP", "I"]
+ignore = ["E741"]                   # We want to be able to use variables called I
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
